--- a/index.html
+++ b/index.html
@@ -35,7 +35,24 @@
       href="./styles.css"
       rel="stylesheet"
     />
-    <title>Gina's Website</title>
+    <!-- Tailwind CSS -->
+    <link
+      href="https://cdn.tailwindcss.com"
+      rel="stylesheet"
+    />
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              custom: '#ff0000', // example custom color
+            },
+          },
+        },
+      }
+    </script>
+
+    <title>Gina Phillips</title>
   </head>
   <body>
     <!-- Header -->
@@ -46,7 +63,7 @@
           <a
             href="#"
             class="navbar-brand"
-            ><h3 class="fw-bold text-white">Gina P</h3></a
+            ><h3 class="fw-bold text-white">Gina Phillips</h3></a
           >
           <!-- Custom Menu Button -->
           <button
@@ -144,33 +161,45 @@
       class="py-5 bg-body"
     >
       <div class="container">
-        <div class="row align-items-center g-5">
+        <div class="row align-items-start g-5">
           <!-- Profile Photo -->
           <div class="col-lg-5 text-center">
             <img
               src="assets/img/profile.jpg"
               alt="Gina's profile picture"
-              class="img-fluid mw-25 rounded-4 shadow about-img"
+              class="img-fluid w-75 rounded-4 shadow about-img mt-4"
             />
           </div>
 
           <!-- Bio & Credentials -->
-          <div class="col-lg-7 mt-4 mt-lg-0">
-            <h2 class="fw-bold mt-4 mb-4 text-center text-md-start">Meet Gina 😋</h2>
+          <div class="col-lg-7 mt-4 mt-lg-0 pt-5">
+            <h2 class="fw-bold mt-4 mb-4 text-center text-md-start">Hi, I'm Gina ✨</h2>
             <p class="lead text-muted">
-              With years of experience in personal development and coaching, Gina has helped
-              countless clients achieve breakthroughs in their lives and careers.
+              I help brilliant, professional women with busy, fast-paced ADHD brains bounce back
+              from burnout, master their mindset, and turn their ADHD into an asset. With 12+ years
+              of combined experience in teaching, coaching, and mentoring, I am passionate about
+              guiding individuals and organisations toward sustainable well-being, mental
+              resilience, and peak performance.
             </p>
             <p class="lead text-muted">
-              Using a personalized approach, Gina empowers individuals to overcome obstacles, set
-              clear goals, and create lasting positive change.
+              Burnout drains creativity, productivity and it costs businesses millions! What's not
+              so well known, however, is that brilliant neurodivergent women are burning out faster
+              than anyone. Many women don't even know it's due to their busy ADHD brain.
+            </p>
+            <p class="lead text-muted">
+              I combine cutting-edge neuroscience, the mind-body connection, and clinically
+              validated techniques like brain retraining, somatic exercises, and EFT. These methods
+              are designed to reset the nervous system, rewire neural pathways, prevent burnout, and
+              enhance well-being—all while supporting neurodivergent minds in thriving environments.
             </p>
 
             <!-- Credentials -->
-            <div class="mt-5 d-flex flex-column flex-md-row gap-3 credentials-container">
-              <span class="badge badge1 fs-6 p-3">Certified Badass</span>
-              <span class="badge badge2 fs-6 p-3">Laughaholic</span>
-              <span class="badge badge3 fs-6 p-3">Wicked Smart</span>
+            <div class="mt-5">
+              <ul class="list-unstyled fs-5 text-muted fw-bold">
+                <li class="mb-2">🎓 University of Oxford Alum</li>
+                <li class="mb-2">🎤 Public Speaker</li>
+                <li class="mb-2">👩‍💼 12+ Years Experience</li>
+              </ul>
             </div>
           </div>
         </div>
@@ -189,14 +218,13 @@
           <div class="col-md-6 col-lg 4">
             <div class="card h-100 shadow service-card">
               <div class="card-body text-center d-flex flex-column justify-content-between">
-                <h3 class="fw-bold py-3">🧠 Mindset Coaching</h3>
-                <p class="text-muted text-start">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod, ipsum
-                  vitae suscipit sagittis, massa nisl sollicitudin quam, ac porttitor ligula ligula
-                  eu magna. Ut auctor nunc ac dapibus consequat. Nulla porttitor, tortor ultricies
-                  gravida mattis.
+                <h3 class="fw-bold py-3">💪 Burnout Recovery</h3>
+                <p class="text-muted">
+                  I use clinically proven techniques and neuroscience-backed tools to help you
+                  reclaim your energy, focus, and passion. My experience overcoming burnout and
+                  chronic illness gives me a deep understanding of the challenges faced by
+                  high-achievers, professionals, and creatives.
                 </p>
-                <p class="fw-bold text-info mt-auto">Starting at $XXX</p>
               </div>
             </div>
           </div>
@@ -204,16 +232,14 @@
           <!-- Service 2 -->
           <div class="col-md-6 col-lg 4">
             <div class="card h-100 shadow service-card">
-              <div class="card-body text-center d-flex flex-column justify-content-between">
-                <h3 class="fw-bold py-3">🎯 Goal Setting</h3>
-                <p class="text-muted text-start">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod, ipsum
-                  vitae suscipit sagittis, massa nisl sollicitudin quam, ac porttitor ligula ligula
-                  eu magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
-                  inceptos himenaeos. Ut auctor nunc ac dapibus consequat. Nulla porttitor, tortor
-                  ultricies gravida mattis.
+              <div class="card-body text-center d-flex flex-column">
+                <h3 class="fw-bold py-3">🧠 Mindset Mastery</h3>
+                <p class="text-muted">
+                  I teach practical mindset shifts and brain-retraining exercises that enhance
+                  productivity, well-being, and creativity, even in high-pressure environments.
+                  These tools are designed to be simple, sustainable, and easy to integrate into
+                  your daily routine.
                 </p>
-                <p class="fw-bold text-info">Starting at $XXX</p>
               </div>
             </div>
           </div>
@@ -221,15 +247,13 @@
           <!-- Service 3 -->
           <div class="col-md-6 col-lg 4">
             <div class="card h-100 shadow service-card">
-              <div class="card-body text-center d-flex flex-column justify-content-between">
-                <h3 class="fw-bold py-3">💪 Confidence Boost</h3>
-                <p class="text-muted text-start">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod, ipsum
-                  vitae suscipit sagittis, massa nisl sollicitudin quam, ac porttitor ligula ligula
-                  eu magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
-                  inceptos himenaeos.
+              <div class="card-body text-start d-flex flex-column">
+                <h3 class="fw-bold py-3">🎯 ADHD Management</h3>
+                <p class="text-muted">
+                  As an ADHD advocate, I help individuals channel their unique neurodiversity into
+                  strengths, using strategies that improve focus, organization, and emotional
+                  regulation. My approach is practical, empowering, and results-driven.
                 </p>
-                <p class="fw-bold text-info">Starting at $XXX</p>
               </div>
             </div>
           </div>
@@ -353,10 +377,12 @@
       class="py-5 bg-light"
     >
       <div class="container d-flex justify-content-center">
-        <div class="row text-center">
-          <h2 class="fw-bold mb-2">Get in Touch</h2>
-          <p class="text-muted mb-4">
-            Feel free to reach out for coaching inquiries or collaborations.
+        <div class="w-100">
+          <h2 class="fw-bold mb-4 text-center">Get in Touch</h2>
+          <p class="text-muted mb-4 w-75 text-start mx-auto">
+            If you’re ready to transform your well-being and mindset, let’s discuss how I can help
+            you or your team. I offer one-off workshops and ongoing coaching tailored to your unique
+            needs.
           </p>
           <div class="d-flex justify-content-center mb-5">
             <a
@@ -368,7 +394,7 @@
           </div>
 
           <!-- Two Columns, Adjust order on small screens -->
-          <div class="row justify-content-between align-items-center mt-5">
+          <div class="row justify-content-between align-items-start mt-5 pt-3">
             <!-- Send a Message Form Column -->
             <div class="col-lg-5 mb-5 order-1 order-lg-2">
               <div class="card p-4 shadow-sm">
@@ -484,7 +510,9 @@
     <!-- Footer Section -->
     <footer class="text-white text-center py-5">
       <div class="container">
-        <p class="mb-2">&copy; 2025 Your Name or Business. All rights reserved.</p>
+        <p class="mb-2">
+          &copy; 2025 Gina Phillips Coaching & Holistic Services. All rights reserved.
+        </p>
       </div>
     </footer>
 
